--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -28,5 +28,6 @@
     </footer>
 
     <script src="{{ '/js/main.js' | url }}" defer></script>
+    <script src="{{ '/js/navigation.js' | url }}" defer></script>
 </body>
 </html>
