--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -1,11 +1,66 @@
 <!DOCTYPE html>
-<html lang="sk">
+<html lang="sk" prefix="og: https://ogp.me/ns#">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ title }} | AMSECURE</title>
-    <meta name="description" content="{{ description or 'Profesionálne bezpečnostné riešenia, WiFi siete a smart domácnosti.' }}">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    
+    <!-- Primary Meta Tags -->
+    <title>{{ title or 'AMSECURE' }} | Profesionálne bezpečnostné riešenia{% if location %} {{ location }}{% endif %}</title>
+    <meta name="title" content="{{ title or 'AMSECURE' }} | Profesionálne bezpečnostné riešenia{% if location %} {{ location }}{% endif %}">
+    <meta name="description" content="{{ description or 'Profesionálne bezpečnostné riešenia, WiFi siete a smart domácnosti. Zabezpečenie vášho domova a podniku na mieru.' }}{% if location %} Servis a montáž v regióne {{ location }}.{% endif %}">
+    <meta name="keywords" content="
+      {% if location %}{{ location }}, {{ location | lower }} {% endif %}
+      bezpečnostné systémy, zabezpečenie budov, kamerové systémy, alarmy, 
+      WiFi siete, smart home, IoT, IT konzultácie, AMSECURE,
+      {% if location %}
+        kamery {{ location | lower }}, wifi {{ location | lower }}, 
+        bezpečnostné kamery {{ location | lower }}, zabezpečenie domácnosti {{ location | lower }}
+      {% else %}
+        kamery orava, wifi orava, wifi bratislava, 
+        bezpečnostné kamery bratislava, zabezpečenie bytu orava
+      {% endif %}
+    ">
+    <meta name="author" content="AMSECURE">
+    <meta name="robots" content="index, follow">
+    {% if location %}
+    <meta name="geo.region" content="SK">
+    <meta name="geo.placename" content="{{ location }}">
+    {% endif %}
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://amsecure.sk{{ page.url | url }}">
+    <meta property="og:title" content="{{ title or 'AMSECURE' }} | Profesionálne bezpečnostné riešenia">
+    <meta property="og:description" content="{{ description or 'Profesionálne bezpečnostné riešenia, WiFi siete a smart domácnosti. Zabezpečenie vášho domova a podniku na mieru.' }}">
+    <meta property="og:image" content="https://amsecure.sk{{ '/img/og-image.jpg' | url }}">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:locale" content="sk_SK">
+    
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://amsecure.sk{{ page.url | url }}">
+    <meta property="twitter:title" content="{{ title or 'AMSECURE' }} | Profesionálne bezpečnostné riešenia">
+    <meta property="twitter:description" content="{{ description or 'Profesionálne bezpečnostné riešenia, WiFi siete a smart domácnosti. Zabezpečenie vášho domova a podniku na mieru.' }}">
+    <meta property="twitter:image" content="https://amsecure.sk{{ '/img/og-image.jpg' | url }}">
+    
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://amsecure.sk{{ page.url | url }}">
+    
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="{{ '/img/favicon.ico' | url }}">
+    <link rel="apple-touch-icon" href="{{ '/img/apple-touch-icon.png' | url }}">
+    
+    <!-- CSS -->
     <link rel="stylesheet" href="{{ '/css/styles.css' | url }}">
+    
+    <!-- Preconnect to external domains -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    
+    <!-- Structured Data -->
+    {% include "partials/structured-data.njk" %}
 </head>
 <body>
     <header>
