--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -49,6 +49,8 @@
     <link rel="canonical" href="https://amsecure.sk{{ page.url | url }}">
     
     <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="{{ '/img/favicon.ico' | url }}">
+    <link rel="shortcut icon" href="{{ '/img/favicon.ico' | url }}">
     <link rel="icon" type="image/png" href="{{ '/img/favicon.ico' | url }}">
     <link rel="apple-touch-icon" href="{{ '/img/apple-touch-icon.png' | url }}">
     
